fix font rendering blurry in some browsers and update copy of work positions

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,28 +25,28 @@
 }
 
 .item {
-  position: relative;
   padding-inline-start: 4rem;
+  position: relative;
 }
 .item::before {
+  border-inline-start: 1px dashed #aaa;
+  bottom: 0;
   content: "";
+  inset-inline-start: 2rem;
   position: absolute;
   top: 0;
-  bottom: 0;
-  inset-inline-start: 2rem;
-  border-inline-start: 1px dashed #aaa;
 }
 .item::after {
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid #aaa;
   content: "";
+  height: 1.4rem;
+  inset-inline-start: 2rem;
   position: absolute;
   top: 0;
-  inset-inline-start: 2rem;
-  border-radius: 50%;
-  width: 1.3rem;
-  height: 1.3rem;
-  border: 1px solid #aaa;
-  background-color: #fff;
   transform: translate(-50%);
+  width: 1.4rem;
 }
 .item:not(:first-of-type) {
   margin-top: 4rem;
@@ -62,9 +62,8 @@
   }
 }
 .item__subtitle {
-  color: #666;
-  font-size: 1.3rem;
-  font-weight: 300;
+  color: #aaa;
+  font-size: 1.4rem;
 }
 .item__title {
   font-size: calc(2.01rem + 0.075vw);
@@ -158,7 +157,7 @@ b {
 
 small {
   color: #666;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: 300;
 }
 
