--- a/src/scss/_item.scss
+++ b/src/scss/_item.scss
@@ -3,31 +3,29 @@
 @import './_mixins';
 
 .item {
-	// padding-inline-start: $spacing-lg;
-	position: relative;
 	padding-inline-start: $spacing-lg;
+	position: relative;
 
 	&::before {
+		border-inline-start: 1px dashed $color-medium-light;
+		bottom: 0;
 		content: '';
+		inset-inline-start:  $spacing-md;
 		position: absolute;
 		top: 0;
-		bottom: 0;
-		inset-inline-start:  $spacing-md;
-		border-inline-start: 1px dashed $color-medium-light;
 	}
 
 	&::after {
+		background-color: $color-white;
+		border-radius: 50%;
+		border: 1px solid $color-medium-light;
 		content: '';
+		height: $font-size-caption;
+		inset-inline-start:  $spacing-md;
 		position: absolute;
 		top: 0;
-		inset-inline-start:  $spacing-md;
-		border-radius: 50%;
+		transform: translate(-50%);
 		width: $font-size-caption;
-		height: $font-size-caption;
-		border: 1px solid $color-medium-light;
-		background-color: $color-white;
-		transform: translate(-50%)
-
 	}
 
 	&:not(:first-of-type) {
@@ -39,9 +37,8 @@
 	}
 
 	&__subtitle {
-		color: $color-medium;
+		color: $color-medium-light;
 		@include font-size($font-size-caption);
-		font-weight: $font-weight-light;
 	}
 
 	&__title {
