--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,7 +8,7 @@ $font-family-base: 'Source Code Pro', monospace;
 $font-size-accent: 4.8rem;
 $font-size-title: 3.2rem;
 $font-size-regular: 1.6rem;
-$font-size-caption: 1.3rem;
+$font-size-caption: 1.4rem;
 $font-size-subtitle: 2.1rem;
 $font-weight-light: 300;
 $font-weight-regular: 400;
